# my_project

./: .coverage  .cspell.json  .deepsource.toml  .gitattributes  .github.yml  .gitignore  .pre-commit-config.yaml  New Text Document.txt  README.md  coverage.xml  deepsource.toml  deepsource.txt  eslint.config.mjs  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_deepsource.py  sonar-project.properties  toml_fixer.py
.github/workflows/: deepsource-analysis.yml  linting.yml  sonar.yml
myenv/: pyvenv.cfg
src/: enhanced_converter.py  faulty_code.py  types.pyi
src/utils/: helpers.py
tests/: helpers_test.py  test_helpers.py
